- Changed the way SDL is found in the cmake file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,11 +15,8 @@ else(SPEAR)
 	endif(WOLF3DSW)
 endif(SPEAR)
 
-find_package(SDL)
-find_package(SDL_mixer)
-if(NOT SDL_FOUND OR NOT SDLMIXER_FOUND)
-	message(SEND_ERROR "SDL(_mixer) is required for building.")
-endif(NOT SDL_FOUND OR NOT SDLMIXER_FOUND)
+find_package(SDL REQUIRED)
+find_package(SDL_mixer REQUIRED)
 include_directories(${SDLMIXER_INCLUDE_DIR})
 include_directories(${SDL_INCLUDE_DIR})
 
@@ -30,6 +27,7 @@ if(WIN32)
 endif(WIN32)
 
 add_executable(../ecwolf
+#	config.cpp
 	file.cpp
 	fmopl.cpp
 	id_ca.cpp
@@ -40,6 +38,7 @@ add_executable(../ecwolf
 	id_vh.cpp
 	id_vl.cpp
 	m_classes.cpp
+#	scanner.cpp
 	signon.cpp
 	wl_act1.cpp
 	wl_act2.cpp
@@ -57,7 +56,6 @@ add_executable(../ecwolf
 	wl_play.cpp
 	wl_state.cpp
 	wl_text.cpp
-#	actors/scanner.cpp
 	${EXTRA_FILES}
 )
 
