- Used ZDoom's file management to export the palettes. - Added Executor's texture names.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,15 @@ if(NOT BZIP2_FOUND)
 	set(BZIP2_LIBRARIES bz2)
 endif(NOT BZIP2_FOUND)
 
+add_subdirectory(tools/zipdir)
+
+add_custom_command( OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/ecwolf.pk3
+   COMMAND ${CMAKE_BINARY_DIR}/tools/zipdir/zipdir -udf ${CMAKE_CURRENT_SOURCE_DIR}/ecwolf.pk3 ${CMAKE_CURRENT_SOURCE_DIR}/wadsrc
+   DEPENDS zipdir )
+	
+add_custom_target( pk3 ALL
+	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/ecwolf.pk3 )
+
 add_subdirectory(gdtoa)
 add_subdirectory(lzma)
 add_subdirectory(src)
