--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,8 @@ add_executable(../ecwolf
 	resourcefiles/file_grp.cpp
 	resourcefiles/file_pak.cpp
 	resourcefiles/file_rff.cpp
+	resourcefiles/file_lump.cpp
+	resourcefiles/file_vgagraph.cpp
 	resourcefiles/file_wad.cpp
 	resourcefiles/file_zip.cpp
 	config.cpp
@@ -64,6 +66,7 @@ add_executable(../ecwolf
 	id_vh.cpp
 	id_vl.cpp
 	language.cpp
+	lumpremap.cpp
 	m_classes.cpp
 	scanner.cpp
 	signon.cpp
