- Music is now using the new resource code.  I actually did this a while ago (probably sometime in august), but apparently I never committed it. - Added some code to handle the rest of the audio later.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,6 +51,7 @@ add_executable(../ecwolf
 	resourcefiles/file_pak.cpp
 	resourcefiles/file_rff.cpp
 	resourcefiles/file_lump.cpp
+	resourcefiles/file_audiot.cpp
 	resourcefiles/file_vgagraph.cpp
 	resourcefiles/file_wad.cpp
 	resourcefiles/file_zip.cpp
