- Load gamemaps with the new resource code.  This means id_ca.cpp is basically dead. - Temporarily disable loading textures from the global scope until I finalize a map format.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,6 +52,7 @@ add_executable(ecwolf
 	resourcefiles/file_rff.cpp
 	resourcefiles/file_lump.cpp
 	resourcefiles/file_audiot.cpp
+	resourcefiles/file_gamemaps.cpp
 	resourcefiles/file_vgagraph.cpp
 	resourcefiles/file_vswap.cpp
 	resourcefiles/file_wad.cpp
@@ -61,7 +62,6 @@ add_executable(ecwolf
 	textures/animations.cpp
 	textures/automaptexture.cpp
 	textures/bitmap.cpp
-	#textures/buildtexture.cpp
 	textures/ddstexture.cpp
 	textures/emptytexture.cpp
 	textures/flattexture.cpp
