- Started removing old actor code and making the decorate system work.  Still a long way to go. - Added a LinkedList container.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -104,6 +104,7 @@ add_executable(ecwolf
 	sndinfo.cpp
 	thinker.cpp
 	thingdef.cpp
+	thingdef_codeptr.cpp
 	thingdef_properties.cpp
 	v_palette.cpp
 	v_video.cpp
