- Split shape and raw textures since the latter should only be used for MiscPatches. - Added NOPs to the decorate code in order to account for order dependence. - Also account for the change from executing the action function at the end of a frame to the start.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -76,6 +76,7 @@ add_executable(ecwolf
 	textures/texturemanager.cpp
 	textures/tgatexture.cpp
 	textures/warptexture.cpp
+	textures/wolfrawtexture.cpp
 	textures/wolfshapetexture.cpp
 	colormatcher.cpp
 	config.cpp
