- Mirroring ZDoom's rename of the resources directory to r_data.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ if(WIN32)
 endif(WIN32)
 
 add_executable(ecwolf
+	r_data/colormaps.cpp
 	resourcefiles/resourcefile.cpp
 	resourcefiles/ancientzip.cpp
 	resourcefiles/file_7z.cpp
@@ -57,7 +58,6 @@ add_executable(ecwolf
 	resourcefiles/file_vswap.cpp
 	resourcefiles/file_wad.cpp
 	resourcefiles/file_zip.cpp
-	resources/colormaps.cpp
 	sfmt/SFMT.cpp
 	textures/anim_switches.cpp
 	textures/animations.cpp
