- Start to use parts of the expression evaluator from ACC++ to evaluate DECORATE expressions.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -81,7 +81,9 @@ add_executable(ecwolf
 	textures/wolfshapetexture.cpp
 	thingdef/thingdef.cpp
 	thingdef/thingdef_codeptr.cpp
+	thingdef/thingdef_expression.cpp
 	thingdef/thingdef_properties.cpp
+	thingdef/thingdef_type.cpp
 	actor.cpp
 	colormatcher.cpp
 	config.cpp
