- Pulled Weapon slot code from ZDoom.  Not sure if I'm keeping the FActorInfo class around though.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -134,6 +134,7 @@ add_executable(ecwolf WIN32
 	v_palette.cpp
 	v_video.cpp
 	w_wad.cpp
+	weaponslots.cpp
 	wl_act2.cpp
 	wl_agent.cpp
 	wl_atmos.cpp
