- Removed VGAClearScreen since we'll be using texture mapping all the time. - Added start of ZMAPINFO parser and transferred the ceiling colors to the mapinfo files. (Thanks to Bouncy for getting the RGB color codes.)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -110,6 +110,7 @@ add_executable(ecwolf WIN32
 	c_cvars.cpp
 	file.cpp
 	files.cpp
+	g_mapinfo.cpp
 	gamemap.cpp
 	gamemap_planes.cpp
 	gamemap_uwmf.cpp
