--- a/android-libs/launcher/AndroidManifest.xml
+++ b/android-libs/launcher/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.beloko.idtech"
+    package="com.beloko.wolf3dhg"
     android:versionCode="1"
     android:versionName="1.0" >
 
