- Fixed issues with compiling with Visual Studio 2015. - Bumped CMake requirement to 2.8.7 so we can require generator expressions and not have to repeat outselves in endif().

--- a/android-libs/launcher/CMakeLists.txt
+++ b/android-libs/launcher/CMakeLists.txt
@@ -11,7 +11,7 @@ set(ANDROID_SDK "ANDROID_SDK-NOTFOUND" CACHE PATH "Path to android.jar")
 set(ANDROID_SDK_TOOLS "ANDROID_SDK_TOOLS-NOTFOUND" CACHE PATH "Path to android build-tools")
 if(ANDROID_SDK STREQUAL "ANDROID_SDK-NOTFOUND" OR ANDROID_SDK_TOOLS STREQUAL "ANDROID_SDK_TOOLS-NOTFOUND")
 	message(FATAL_ERROR "Please set ANDROID_SDK to location of android.jar and ANDROID_SDK_TOOLS to build-tools for the platform")
-endif(ANDROID_SDK STREQUAL "ANDROID_SDK-NOTFOUND" OR ANDROID_SDK_TOOLS STREQUAL "ANDROID_SDK_TOOLS-NOTFOUND")
+endif()
 
 find_file(ANDROID_SDK_JAR android.jar PATHS "${ANDROID_SDK}")
 find_file(ANDROID_AAPT_BINARY NAMES aapt aapt.exe PATHS "${ANDROID_SDK_TOOLS}")
