--- a/lzma/CMakeLists.txt
+++ b/lzma/CMakeLists.txt
@@ -1,10 +1,14 @@
-cmake_minimum_required( VERSION 2.4 )
+cmake_minimum_required( VERSION 2.8.7 )
+
+if(POLICY CMP0054)
+	cmake_policy(SET CMP0054 NEW)
+endif()
 
 #make_release_only()
 
 if( "${CMAKE_C_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang" )
 	set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -fomit-frame-pointer" )
-endif( "${CMAKE_C_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang" )
+endif()
 
 set( LZMA_FILES
 	C/7zBuf.c
@@ -24,9 +28,9 @@ set( LZMA_FILES
 
 if( WIN32 )
 	set( LZMA_FILES ${LZMA_FILES} C/LzFindMt.c C/Threads.c )
-else( WIN32 )
+else()
 	set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_7ZIP_ST" )
-endif( WIN32 )
+endif()
 
 add_library( lzma ${LZMA_FILES} )
 target_link_libraries( lzma )
