--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,62 +1,50 @@
-cmake_minimum_required(VERSION 2.4)
+cmake_minimum_required(VERSION 2.8.7)
 project(ECWolf)
 
-option(ANDROID "Build for Android" OFF)
+if(POLICY CMP0054)
+	cmake_policy(SET CMP0054 NEW)
+endif()
 
-# Generator expression are available some time in CMake 2.8. Due to
-# cmake_minimum_required, we can assume a minor version of > 7 implies major >= 2
-if(${CMAKE_MAJOR_VERSION} GREATER 2 OR ${CMAKE_MINOR_VERSION} GREATER 7)
-	option( NO_GENERATOR_EXPRESSIONS "Disable generator expressions (for building pk3s with IDEs)." OFF )
-else(${CMAKE_MAJOR_VERSION} GREATER 2 OR ${CMAKE_MINOR_VERSION} GREATER 7)
-	set( NO_GENERATOR_EXPRESSIONS ON )
-endif(${CMAKE_MAJOR_VERSION} GREATER 2 OR ${CMAKE_MINOR_VERSION} GREATER 7)
+option(ANDROID "Build for Android" OFF)
 
 # Support cross compiling
 option( FORCE_CROSSCOMPILE "Turn on cross compiling." NO )
 if( FORCE_CROSSCOMPILE )
 	set( CMAKE_CROSSCOMPILING TRUE )
-endif( FORCE_CROSSCOMPILE )
+endif()
 
 if(CMAKE_CROSSCOMPILING)
 	set(IMPORT_EXECUTABLES "IMPORTFILE-NOTFOUND" CACHE FILEPATH "Export file from native build.")
 	include(${IMPORT_EXECUTABLES})
-endif(CMAKE_CROSSCOMPILING)
+endif()
 
 # Simplify pk3 building, add_pk3(filename srcdirectory)
 function( add_pk3 PK3_NAME PK3_DIR )
-	get_target_property(ZIPDIR_EXE zipdir LOCATION)
-
 	# Generate target name. Just use "pk3" for main pk3 target.
 	string( REPLACE "." "_" PK3_TARGET ${PK3_NAME} )
 	if( ${PK3_TARGET} STREQUAL "ecwolf_pk3" )
 		set( PK3_TARGET "pk3" )
-	endif( ${PK3_TARGET} STREQUAL "ecwolf_pk3" )
+	endif()
 
-	if( NOT NO_GENERATOR_EXPRESSIONS )
-		add_custom_command( OUTPUT ${OUTPUT_DIR}/${PK3_NAME}
-			COMMAND ${ZIPDIR_EXE} -udf ${OUTPUT_DIR}/${PK3_NAME} ${PK3_DIR}
-			COMMAND ${CMAKE_COMMAND} -E copy_if_different ${OUTPUT_DIR}/${PK3_NAME} $<TARGET_FILE_DIR:ecwolf>/${PK3_NAME}
-			DEPENDS zipdir )
-	else( NOT NO_GENERATOR_EXPRESSIONS )
-		add_custom_command( OUTPUT ${OUTPUT_DIR}/${PK3_NAME}
-			COMMAND ${ZIPDIR_EXE} -udf ${OUTPUT_DIR}/${PK3_NAME} ${PK3_DIR}
-			DEPENDS zipdir )
-	endif( NOT NO_GENERATOR_EXPRESSIONS )
+	add_custom_command( OUTPUT ${OUTPUT_DIR}/${PK3_NAME}
+		COMMAND zipdir -udf ${OUTPUT_DIR}/${PK3_NAME} ${PK3_DIR}
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different ${OUTPUT_DIR}/${PK3_NAME} $<TARGET_FILE_DIR:ecwolf>/${PK3_NAME}
+		DEPENDS zipdir )
 
 	# Touch the zipdir executable here so that the pk3s are forced to rebuild
 	# each time since their dependecy has "changed."
 	if( NOT ANDROID )
 		add_custom_target( ${PK3_TARGET} ALL
-			COMMAND ${CMAKE_COMMAND} -E touch ${ZIPDIR_EXE}
+			COMMAND ${CMAKE_COMMAND} -E touch $<TARGET_FILE:zipdir>
 			DEPENDS ${OUTPUT_DIR}/${PK3_NAME} )
-	else( NOT ANDROID )
+	else()
 		# Prepare assets directory for APK
 		add_custom_target( ${PK3_TARGET} ALL
 			COMMAND ${CMAKE_COMMAND} -E copy_if_different ${OUTPUT_DIR}/${PK3_NAME} ${OUTPUT_DIR}/assets/${PK3_NAME}
-			COMMAND ${CMAKE_COMMAND} -E touch ${ZIPDIR_EXE}
+			COMMAND ${CMAKE_COMMAND} -E touch $<TARGET_FILE:zipdir>
 			DEPENDS ${OUTPUT_DIR}/${PK3_NAME} )
-	endif( NOT ANDROID )
-endfunction( add_pk3 )
+	endif()
+endfunction()
 
 set(OUTPUT_DIR ${CMAKE_BINARY_DIR} CACHE PATH "Directory in which to build ECWolf.")
 
@@ -78,29 +66,29 @@ if(NOT ZLIB_FOUND OR INTERNAL_ZLIB)
 	add_subdirectory(zlib)
 	set(ZLIB_LIBRARIES z)
 	set(ZLIB_LIBRARY z)
-endif(NOT ZLIB_FOUND OR INTERNAL_ZLIB)
+endif()
 
 if(NOT BZIP2_FOUND OR INTERNAL_BZIP2)
 	set(BZIP2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bzip2)
 	add_subdirectory(bzip2)
 	set(BZIP2_LIBRARIES bz2)
-endif(NOT BZIP2_FOUND OR INTERNAL_BZIP2)
+endif()
 
 if(NOT JPEG_FOUND OR INTERNAL_JPEG)
 	set(JPEG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/jpeg-6b)
 	add_subdirectory(jpeg-6b)
 	set(JPEG_LIBRARIES jpeg)
 	set(JPEG_LIBRARY jpeg)
-endif(NOT JPEG_FOUND OR INTERNAL_JPEG)
+endif()
 
 if(MSVC)
 	add_definitions(-D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE)
-endif(MSVC)
+endif()
 
 option(BUILD_PATCHUTIL "Builds the Wolf patching utility." OFF)
 if(BUILD_PATCHUTIL)
 	add_subdirectory(tools/patchutil)
-endif(BUILD_PATCHUTIL)
+endif()
 
 add_subdirectory(tools/zipdir)
 add_subdirectory(tools/updaterevision)
@@ -110,7 +98,7 @@ add_subdirectory(gdtoa)
 add_subdirectory(lzma)
 if(GPL AND USE_LIBTEXTSCREEN)
 	add_subdirectory(textscreen)
-endif(GPL AND USE_LIBTEXTSCREEN)
+endif()
 
 if(ANDROID)
 	set(LIBPNG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/android-libs)
@@ -127,10 +115,10 @@ if(ANDROID)
 	add_subdirectory(android-libs/TinyXML)
 	add_subdirectory(android-libs/TouchControls)
 	add_subdirectory(android-libs/launcher)
-endif(ANDROID)
+endif()
 
 add_subdirectory(src)
 
 if( NOT CMAKE_CROSSCOMPILING )
 	export(TARGETS ${CROSS_EXPORTS} FILE "${CMAKE_BINARY_DIR}/ImportExecutables.cmake" )
-endif( NOT CMAKE_CROSSCOMPILING )
+endif()
