- If using SDL2 with a console app, newly created windows won't get focus after input from some other source (stdin/iwad picker) so we must force it to have focus manually. - Fixed some Windows compiling issues.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -99,8 +99,10 @@ if(WIN32)
 		win32/i_crash.cpp
 		win32/i_main.cpp
 		win32/wl_iwad_win32.cpp
-		sdl_winmain.cpp
 	)
+	if(${SDL_VERSION_STRING} VERSION_LESS "2.0.0")
+		set(EXTRA_FILES ${EXTRA_FILES} sdl_winmain.cpp)
+	endif()
 elseif(APPLE OR ANDROID)
 	set(NO_GTK ON)
 else(WIN32)
