- Added support for reading PICT images since we have a few that we care about (skill level selection, mission icon). The PICT format is too complex to implement fully, but we don't really need to.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -207,6 +207,7 @@ set(SOURCE_FILES
 	textures/machudtexture.cpp
 	textures/multipatchtexture.cpp
 	textures/patchtexture.cpp
+	textures/picttexture.cpp
 	textures/pcxtexture.cpp
 	textures/pngtexture.cpp
 	textures/rawpagetexture.cpp
