--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,8 @@ add_custom_target(revision_check ALL
 	DEPENDS updaterevision
 )
 
+set(PLATFORM_EXE_FLAGS "")
+
 include(CheckCXXSourceCompiles)
 include(CheckFunctionExists)
 include(FindPkgConfig)
@@ -94,6 +96,8 @@ if(WIN32)
 		set(EXTRA_FILES ${ECWolf_SOURCE_DIR}/src/win32/windows.rc)
 	endif(CMAKE_COMPILER_IS_GNUCXX)
 
+	set(PLATFORM_EXE_FLAGS WIN32)
+
 	set(EXTRA_FILES
 		${EXTRA_FILES}
 		win32/i_crash.cpp
@@ -151,8 +155,6 @@ elseif(ANDROID)
 	add_definitions(-Dmalloc_usable_size=dlmalloc_usable_size)
 
 	set(EXTRA_LIBRARIES ${EXTRA_LIBRARIES} ${TOUCHCONTROLS_LIBRARY} log)
-else(APPLE)
-	set(PLATFORM_EXE_FLAGS "")
 endif(APPLE)
 
 # Glob for the header files so project generation can include them
