- Made new 3D sprite scaler more perspective correct although it falls apart when you get close enough. - Modified Wolf4SDL 3D sprite scaler to work with updated code. - Added toggle Tab+3 toggle to switch scalers for debugging.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -274,6 +274,7 @@ set(SOURCE_FILES
 	wl_atmos.cpp
 	wl_cloudsky.cpp
 	wl_debug.cpp
+	wl_dir3dspr.cpp
 	wl_draw.cpp
 	wl_floorceiling.cpp
 	wl_game.cpp
