--- a/gdtoa/CMakeLists.txt
+++ b/gdtoa/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required( VERSION 2.8.12 )
 
-if(POLICY CMP0054)
-	cmake_policy(SET CMP0054 NEW)
-endif()
-
 set( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -D_DEBUG" )
 
 # Disable warnings for << operator precedence (4554) and
@@ -23,18 +19,16 @@ if( NOT MSVC AND NOT APPLE )
 	if( NOT CMAKE_CROSSCOMPILING )
 		add_executable( arithchk arithchk.c )
 	endif()
-	get_target_property( ARITHCHK_EXE arithchk LOCATION )
 	add_custom_command( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/arith.h 
-		COMMAND ${ARITHCHK_EXE} >${CMAKE_CURRENT_BINARY_DIR}/arith.h
+		COMMAND arithchk >${CMAKE_CURRENT_BINARY_DIR}/arith.h
 		DEPENDS arithchk )
 
 	if( NOT CMAKE_CROSSCOMPILING )
 		add_executable( qnan qnan.c arith.h )
 		set( CROSS_EXPORTS ${CROSS_EXPORTS} arithchk qnan PARENT_SCOPE )
 	endif()
-	get_target_property( QNAN_EXE qnan LOCATION )
 	add_custom_command( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/gd_qnan.h
-		COMMAND ${QNAN_EXE} >${CMAKE_CURRENT_BINARY_DIR}/gd_qnan.h
+		COMMAND qnan >${CMAKE_CURRENT_BINARY_DIR}/gd_qnan.h
 		DEPENDS qnan )
 		
 	set( GEN_FP_FILES arith.h gd_qnan.h )
@@ -48,7 +42,4 @@ add_library( gdtoa
 	misc.c
 	)
 target_link_libraries( gdtoa )
-if( GEN_FP_DEPS )
-	add_dependencies( gdtoa ${GEN_FP_DEPS} )
-endif()
 
