--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,28 +60,37 @@ option(INTERNAL_ZLIB "Force build with internal zlib" OFF)
 option(INTERNAL_BZIP2 "Force build with internal bzip2" OFF)
 option(INTERNAL_JPEG "Force build with internal libjpeg" OFF)
 
-find_package(ZLIB)
-find_package(BZip2)
-find_package(JPEG)
+find_package(ZLIB QUIET)
+find_package(BZip2 QUIET)
+find_package(JPEG QUIET)
 
 if(NOT ZLIB_FOUND OR INTERNAL_ZLIB)
+	message(STATUS "Using internal zlib")
 	set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/zlib)
 	add_subdirectory(zlib)
 	set(ZLIB_LIBRARIES z)
 	set(ZLIB_LIBRARY z)
+else()
+	message(STATUS "Using system zlib, includes found at ${ZLIB_INCLUDE_DIR}")
 endif()
 
 if(NOT BZIP2_FOUND OR INTERNAL_BZIP2)
+	message(STATUS "Using internal libbz2")
 	set(BZIP2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bzip2)
 	add_subdirectory(bzip2)
 	set(BZIP2_LIBRARIES bz2)
+else()
+	message(STATUS "Using system libbz2, includes found at ${BZIP2_INCLUDE_DIR}")
 endif()
 
 if(NOT JPEG_FOUND OR INTERNAL_JPEG)
+	message(STATUS "Using internal libjpeg")
 	set(JPEG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/jpeg-6b)
 	add_subdirectory(jpeg-6b)
 	set(JPEG_LIBRARIES jpeg)
 	set(JPEG_LIBRARY jpeg)
+else()
+	message(STATUS "Using system libjpeg, includes found at ${JPEG_INCLUDE_DIR}")
 endif()
 
 include(LocateSDL2.cmake)
