- Update internal zlib copy to 1.2.11 from Doomseeker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 cmake_minimum_required(VERSION 2.8.12)
 project(ECWolf)
 
@@ -73,16 +74,22 @@ option(INTERNAL_ZLIB "Force build with internal zlib" OFF)
 option(INTERNAL_BZIP2 "Force build with internal bzip2" OFF)
 option(INTERNAL_JPEG "Force build with internal libjpeg" OFF)
 
-find_package(ZLIB QUIET)
-find_package(BZip2 QUIET)
-find_package(JPEG QUIET)
+if(NOT INTERNAL_ZLIB)
+	find_package(ZLIB QUIET)
+endif()
+if(NOT INTERNAL_BZIP2)
+	find_package(BZip2 QUIET)
+endif()
+if(NOT INTERNAL_JPEG)
+	find_package(JPEG QUIET)
+endif()
 
 if(NOT ZLIB_FOUND OR INTERNAL_ZLIB)
 	message(STATUS "Using internal zlib")
 	set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/deps/zlib)
 	add_subdirectory(deps/zlib)
-	set(ZLIB_LIBRARIES z)
-	set(ZLIB_LIBRARY z)
+	set(ZLIB_LIBRARIES ZLIB::ZLIB)
+	set(ZLIB_LIBRARY ZLIB::ZLIB)
 else()
 	message(STATUS "Using system zlib, includes found at ${ZLIB_INCLUDE_DIR}")
 endif()
