--- a/.hgignore
+++ b/.hgignore
@@ -3,4 +3,5 @@
 syntax: glob
 android-libs/launcher/src/com/beloko/idtech/R.java
 syntax: regexp
-^build[a-zA-Z0-9_\-]*/
+^(cmake-)?build[a-zA-Z0-9_\-]*/
+/.idea/
