- Depending on how the distro builds SDL2 it might actually come with modern CMake targets, so use them if they exist. (Resolves issue #249)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -320,7 +320,7 @@ else()
 endif()
 
 add_dependencies(ecwolf revision_check)
-target_link_libraries(ecwolf ${EXTRA_LIBRARIES} SDL::SDL_mixer SDL::SDL_net SDL::SDL ${ZLIB_LIBRARY} ${BZIP2_LIBRARIES} ${JPEG_LIBRARIES} lzma gdtoa)
+target_link_libraries(ecwolf ${EXTRA_LIBRARIES} SDL2::SDL2_mixer SDL2::SDL2_net SDL2::SDL2 ${ZLIB_LIBRARY} ${BZIP2_LIBRARIES} ${JPEG_LIBRARIES} lzma gdtoa)
 target_include_directories(ecwolf PRIVATE
 	${ZLIB_INCLUDE_DIR}
 	${BZIP2_INCLUDE_DIR}
