--- a/.hgignore
+++ b/.hgignore
@@ -4,4 +4,5 @@ syntax: glob
 android-libs/launcher/src/com/beloko/idtech/R.java
 syntax: regexp
 ^(cmake-)?build[a-zA-Z0-9_\-]*/
+^results/
 /.idea/
